--- a/charactor.html
+++ b/charactor.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title> 어딘가에 지원하기 2 </title>
+    <title> 성격그래프 </title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
     <link rel="stylesheet" href="static/reset.css" >
     <link rel="stylesheet" href="static/tag.css" >
