--- a/profile.html
+++ b/profile.html
@@ -150,8 +150,7 @@
                 nginx설정도 테스트하고, 여러가지 웹서비스도 만들도 있는 수준이라고 생각하지만 아직도 부족한게 많고
                 배울 것이 많습니다.<br>
 
-                서비스를 개발하고 운영하고 진행해 가면서 심장조이는 일도 많았지만 이벤트 실행시 많은 접속자 수와 반응이 이일의 즐거움이기도 합니다.
-
+                서비스를 개발하고 운영하고 진행해 가면서 심장 조이는 일도 많았지만 이벤트를 실행할 때 많은 접속자 수와 반응이 이 일의 즐거움이기도 합니다.
 
                 <h4> 기술적 작업 </h4>
                 <ul>
