--- a/life1.html
+++ b/life1.html
@@ -63,7 +63,13 @@
              <p> 너무 자주 속이면 안된다.  </p>
 
              <h3> 원하는 것을 모를때 </h3>
-             <p>  오직 확실한 한 가지는 모든 건 행동을 통해 드러난다는 사실이다. 행동을 보라. </p>
+             <p>  오직 확실한 한 가지는 모든 건 행동을 통해 드러난다는 사실이다. 행동을 보라.
+                 https://ppss.kr/archives/236542 좋은 글
+                 퇴사가 아니라 내 프로젝트를 시작해야하는 때가 아닌가 한다.
+                 내 프로젝트를 위해 시작해야할 것들을 정리해서 하나씩 실천해 나가는 것
+                 그게 필요하다.  
+              </p>
+
 
              <!-- <h3> 실험 1: 잡코리아의 포지션받기를 열어 두어보았다.</h3>
              <p> 일주일의 결과 : 자기네 홈페이지도 관리 안하는 회사가 지원을 요청한다. 주로 구로구 에서 요청이 온다.  </p> -->
