--- a/index.html
+++ b/index.html
@@ -178,6 +178,30 @@ animation-iteration-count: infinite;
             </script>
         </div><!-- BOX END -->
 
+        <div  class="box_400" >
+            <style>
+            .slider div {
+                width:100px;
+                height:100px;
+                text-align: center;
+            }
+            </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+                <div style="width:200px;height:200px;">
+                    <div class="slider">
+                        <div>I am a slide.</div>
+                        <div>I am another slide.</div>
+                    </div>
+                </div>
+<script>
+      $(document).ready(function(){
+        $('.slider').bxSlider();
+      });
+</script>
+
+        </div><!-- BOX END -->
         <hr>
         <footer class="footer">
             <div class="">
