--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@ animation-iteration-count: infinite;
         </div><!-- BOX END -->
 
         <div  class="box_400" >
+            <h3> 슬라이드 - jquery , bxslider 사용. </h3>
+
             <style>
             .slider div {
                 width:100px;
@@ -186,22 +188,46 @@ animation-iteration-count: infinite;
                 text-align: center;
             }
             </style>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+              <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+              <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+              <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
                 <div style="width:200px;height:200px;">
                     <div class="slider">
                         <div>I am a slide.</div>
                         <div>I am another slide.</div>
                     </div>
                 </div>
-<script>
-      $(document).ready(function(){
-        $('.slider').bxSlider();
-      });
-</script>
+                <script>
+                      $(document).ready(function(){
+                        $('.slider').bxSlider();
+                      });
+                </script>
 
         </div><!-- BOX END -->
+
+
+        <div  class="box_400" >
+            <h3> 문자 복사하기 - jquery , clipboard.js 사용. </h3>
+            <div class="box">
+                <a href="javascript:#"  class="btn_hashtag copy"  data-clipboard-text="#나만의 #나를위한 #나에의한">
+                    <img id="box_hash_copy1" src="resources/images/btn_hashtag.png" alt="필수 해시태그 복사하기" /></a>
+            </div>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
+            <script>
+            var clipboard = new Clipboard('.copy');
+            clipboard.on('success', function(e) {
+                console.log(e);
+                return;
+            });
+
+            $("#box_hash_copy1").click(function(){
+                alert(" 해시태그가 복사되었습니다.");
+            });
+            </script>
+        </div><!-- BOX END -->
+
+
+
         <hr>
         <footer class="footer">
             <div class="">
