--- a/index.html
+++ b/index.html
@@ -227,6 +227,39 @@ animation-iteration-count: infinite;
         </div><!-- BOX END -->
 
 
+        <div  class="box_400" >
+            <h3> 지우개 효과 - jquery , eraser 사용. </h3>
+
+            <span class="container">
+              <img id="robot" src="static/jquery.eraser/img/please.jpg" />
+              <img id="redux" src="static/jquery.eraser/img/overlay.jpg" />
+            </span>
+            <p>
+              <a href="#" onclick="reset(event);" class="box"> RESET </a>
+              <a href="#" onclick="remove(event);" class="box"> CLEAR </a>
+            </p>
+
+            <script src='static/jquery.eraser/jquery.eraser.js' type='text/javascript'></script>
+            <script type = "text/javascript">
+
+              $(function(){
+                $('#redux').eraser({size: 10});
+              });
+
+
+              function remove(event) {
+                $("#redux").eraser('clear');
+                event.preventDefault();
+              }
+
+              function reset(event) {
+                $("#redux").eraser('reset');
+                event.preventDefault();
+              }
+
+            </script>
+
+        </div><!-- BOX END -->
 
         <hr>
         <footer class="footer">
