--- a/index.html
+++ b/index.html
@@ -209,8 +209,9 @@ animation-iteration-count: infinite;
         <div  class="box_400" >
             <h3> 문자 복사하기 - jquery , clipboard.js 사용. </h3>
             <div class="box">
+                <span> #나만의 #나를위한 #나에의한 </span>
                 <a href="javascript:#"  class="btn_hashtag copy"  data-clipboard-text="#나만의 #나를위한 #나에의한">
-                    <img id="box_hash_copy1" src="resources/images/btn_hashtag.png" alt="필수 해시태그 복사하기" /></a>
+                    <button id="box_hash_copy1" src="resources/images/btn_hashtag.png" > 해시태그 복사하기</button></a>
             </div>
             <script src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
             <script>
@@ -228,8 +229,8 @@ animation-iteration-count: infinite;
 
 
         <div  class="box_400" >
-            <h3> 지우개 효과 - jquery , eraser 사용. </h3>
-            
+            <h3>  </h3>
+
         </div><!-- BOX END -->
 
 
