--- a/life1.html
+++ b/life1.html
@@ -67,7 +67,7 @@
                  https://ppss.kr/archives/236542 좋은 글
                  퇴사가 아니라 내 프로젝트를 시작해야하는 때가 아닌가 한다.
                  내 프로젝트를 위해 시작해야할 것들을 정리해서 하나씩 실천해 나가는 것
-                 그게 필요하다.  
+                 그게 필요하다.
               </p>
 
 
@@ -75,6 +75,25 @@
              <p> 일주일의 결과 : 자기네 홈페이지도 관리 안하는 회사가 지원을 요청한다. 주로 구로구 에서 요청이 온다.  </p> -->
 
         </div>
+
+
+        <div  class="box_800">
+            <h2> 멘탈 갑이 되기 위한 방법  </h2>
+            <h3> 탓하며 시간을 낭비하지 않는다.  </h3>
+            <p> 자신의 삶을 책임지며 인생이란 쉬운것도 항상 공정한 것도 아니란 사실을 이해한다.  </p>
+            <h3> 자신의 독립성을 포기하지 않는다.  </h3>
+            <p> 자신의 기분과 감정을 조절 할 수 있는 것은 오직 자기 자신 뿐이란 사실을 잘알고 있다.   </p>
+            <h3> 변화를 피하지 않는다.  </h3>
+            <p> 변화란 불가피하며 적응할 수 있는 능력이 자신에게 있다고 믿는다.  </p>
+            <h3> 어쩔수 없는 일에 에너지를 낭비하지 않는다.  </h3>
+            <p> 자신이 조절할 수 없는 일을 받아들이고 자신의 태도를 조절한다.   </p>
+            <h3> 모든 사람의 마음에 들려고 노력하지 않는다.   </h3>
+            <p> 나 답게 행동할때 건강한 관계가 형성됨을 알고 때론 그들은 필요할때 절대 안돼라고 말하는 것을 주저하지 않는다. </p>
+            <h3> 계산된 리스크를 두려워 하지 않는다.    </h3>
+            <p> 계산되지 않은 리스트는?? ㅋㅋㅋ 요건 좀 어렵다.   </p>
+
+        </div>
+
 
         <div class="container">
             <div class="box2">
