--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title> 어딘가에 지원하기 2 </title>
+    <title>  지원하기  </title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
     <link rel="stylesheet" href="static/reset.css" >
     <link rel="stylesheet" href="static/tag.css" >
@@ -21,41 +21,41 @@
 
     <div class="container">
         <div  class="box_800">
-            <h2> 안녕하세요~ 12년차 기본을 갖춘 웹개발자인 인 jh 입니다.</h2>
+            <h2> 안녕하세요~ 13년차 기본을 갖춘 웹개발자 MJH 입니다.</h2>
             <img src="static/web.png" />
             <h3 id="choose-a-bank"> 전체적 설명 </h3>
-            <p> 어떤 프로젝트를 경험했는지? - > 웹서비스 프로젝트만 경험해 봤습니다. <br>
+            <p> 어떤 프로젝트를 경험했는지? - > 웹서비스 프로젝트만 경험해 봤습니다. <br><br>
 
-                어떤 도구/프레임웍을 사용했는지 -> php, nginx, linux ,ubuntu, git, javascript, html5, css3, bootstrap, lalavel, vagrant , sorucetree  <br>
+                어떤 도구/프레임웍을 사용했는지 -> PHP, NGINX, LINUX , UBUNTU, GIT, JAVASCRIPT, HTML5, CSS3, BOOTSTRAP, LALAVEL, VAGRANT , SORUCETREE  <br><br>
 
-                어떤 개발 방법론을 사용했었는지 -> MVC  <br>
+                어떤 개발 방법론을 사용했었는지 -> MVC  <br><br>
 
-                프로젝트에 어떤 책임으로 참여했는지 개발자인지 개발리더인지 -> 개발자로 참여했고 서버 설치부터 개발, 운영까지 해봤습니다.<br>
+                프로젝트에 어떤 책임으로 참여했는지 개발자인지 개발리더인지 -> 개발자로 참여했고 서버 설치부터 개발, 운영까지 해봤습니다.<br><br>
 
-                팀이나 회사에 프로젝트외에 어떤 기여를 했는지-> 주어진 프로젝트를 완성하였고 성공도 하고 실패도 하였습니다. <br>
+                팀이나 회사에 프로젝트 외에 어떤 기여를 했는지-> 주어진 프로젝트를 완성하였고 성공도 하고 실패도 하였습니다. <br><br>
 
-                프로젝트에서 발생한 기술적인 문제를 어떻게 해결하는지 -> 구글 검색과 스택오버플로우. 참고하여 해결합니다. 소스를 외우기보단 응용을 잘합니다. <BR>
+                프로젝트에서 발생한 기술적인 문제를 어떻게 해결하는지 -> 구글 검색과 스택오버플로우. 참고하여 해결합니다. 소스를 외우기보단 응용을 잘합니다. <BR><br>
 
-                리더쉽, 협업 -> 리더쉽은 약합니다. 단체 생활을 잘하긴 합니다만 리더가 되어 본 적은 별로 없습니다. <BR>
+                리더쉽, 협업 -> 리더쉽은 약합니다. 단체 생활을 잘하긴 합니다만 리더가 되어 본 적은 별로 없습니다. <BR><br>
 
-                커뮤니케이션 스킬 -> 말이 안 통해 본적은 없습니다. 기획자와 소통 이제는 좀 알것 같습니다. 세상에 다양한 사람들이 있다는 것을 받아들이는 편입니다.  <br>
+                커뮤니케이션 스킬 -> 말이 안 통해 본적은 없습니다. 기획자와 소통 이제는 좀 알것 같습니다. 세상에 다양한 사람들이 있다는 것을 받아들이는 편입니다.  <br><br>
 
-                요즘 관심사 - 서버보안과 css . 둘이 엄청나게 먼 기술 같아도 내가 정복 못 한 곳이기도 해서. 배워도 배워도 끝이 없습니다.  <br>
+                요즘 관심사 - 서버보안과 css . 둘이 엄청나게 먼 기술 같아도 내가 정복 못 한 곳이기도 해서. 배워도 배워도 끝이 없습니다.  <br><br>
 
                 주의 사항 : 왜? 와 합리성에 대해 고민을 많이 하는 편입니다.
             </p>
             <p>
-                책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 웹 프로그래머 입니다.
-                문제 해결 능력이 뛰어나며 커뮤니케이션의 중요성을 누구보다 잘 아는 직장인입니다.
+                책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 웹 프로그래머 입니다.<br>
+                문제 해결 능력이 뛰어나며 커뮤니케이션의 중요성을 누구보다 잘 아는 직장인입니다.<br>
                 다룰 수 있는 기술은 javascript, html5, jquery, css, php <br>
                  ubuntu 18, 20 설치 nginx설치및 운용, oracle8,9,10, mysql설치 및 운용, aws구성, 시스템 프로세스 만들기,ubuntu, 파이썬 초급 입니다. <br>
-                기술을 모르는 사람에게 친절하게 응답하고 기술을 잘 아는 사람에게는 성실히 질문하는 스타일입니다.
-                십년간 it계열에 있으면서 많은 서비스를 경험했고 개발하였습니다.
-                full stack 을 지향하지만 모든 것을 혼자 다 개발할 수는 있다고 생각하진 않습니다.
+                기술을 모르는 사람에게 친절하게 응답하고 기술을 잘 아는 사람에게는 성실히 질문하는 스타일입니다.<br>
+                십년간 it계열에 있으면서 많은 서비스를 경험했고 개발하였습니다.<br>
+                full stack 을 지향하지만 모든 것을 혼자 다 개발할 수는 있다고 생각하진 않습니다.<br>
                 최대한 웹과 웹서버상에서 발생하는 문제들을 해결하려고 노력합니다. <br>
-                문제가 발생하면 일단은 해결을 하고 재발을 방지하기 위한 프로세스를 구성합니다.
-                기술보다는 사람과 일한다 생각하고 커뮤니케이션에서 부딪히지 않도록 노력합니다.
-                모든 문제는 사람에게 나오고 사람으로 해결된 다는 것을 알기에 커뮤니케이션에 부단히 노력하고 있습니다.
+                문제가 발생하면 일단은 해결을 하고 재발을 방지하기 위한 프로세스를 구성합니다.<br>
+                기술보다는 사람과 일한다 생각하고 커뮤니케이션에서 부딪히지 않도록 노력합니다.<br>
+                모든 문제는 사람에게 나오고 사람으로 해결된 다는 것을 알기에 커뮤니케이션에 부단히 노력하고 있습니다.<br>
             </p>
 
             <h3 id="choose-a-bank"> 2006 - 2008 </h3>
