--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title> html </title>
+    <title> MJH'S INFO </title>
     <link rel="stylesheet" href="static/reset.css" >
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
@@ -21,10 +21,9 @@
         <div  class="box_800" >
             <h2> M BOX COMPANY 1</h2>
             <h3> 어떻게 하면 웹에서 먹고 살지 고민 중인 개발자 </h3>
-            <p>  십년 넘는 경력... 뭐했나 싶긴하지만 이거저거 여러가지 많이도 했음. <br>
-            지금 이렇게 깃을 통해 HTML과 JS, CSS만으로 사이트를 만든 것만 봐도 대단하지 않음? ㅎㅎㅎㅎ <br>
-            메인만 벌써 수십가지가 있는 종잡을 수 없는 사이트 <br>
-            </p>
+            <p>  십년 넘는 경력... PHP 기반에서 아파치, NGINX 설정도하고 AWS 이용해서 웹서버도 만들고  <br>
+                GIT 사용해서 COMMIT 하다 수많은 ^M 도 지켜봄. 주로 서비스 만드는 데 주력한 개발자.
+             </p>
         </div>
 
         <div  class="box_800" >
@@ -32,7 +31,6 @@
             <h3> 매일 배우는 개발자 </h3>
             <p>  그렇게 배우고도 잊어먹고 또 배우고 새로운 것도 엄청 많아 또 배운다. <br>
               배우는 게 싫을 때도 좋을 때도 있는 갈팡질팡 개발자 <br>
-
             </p>
         </div>
 
@@ -47,7 +45,7 @@
         <hr>
         <footer class="footer">
             <div class="">
-              <p> © 2021 - mjh. All rights reserved. </p>
+              <p> © 2022 - mjh. All rights reserved. </p>
             </div>
         </footer>
         <!--//  FOOTER -->
