--- a/new2022.html
+++ b/new2022.html
@@ -148,6 +148,13 @@
                         <div class="date"> </div>
                     </div>
                 </li>
+                <li class="board-item">
+                    <div class="sub-item">
+                        <div class="cate"> 일정 </div>
+                        <h2 class="subject"> 반드시 맞추어야 하는 약속이라고 생각합니다. </h2>
+                        <div class="date"> </div>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="board-box tab4" style="display: none;">
@@ -160,6 +167,13 @@
                         <div class="date"> </div>
                     </div>
                 </li>
+                <li class="board-item">
+                    <div class="sub-item">
+                        <div class="cate"> 꾸준한 성장 </div>
+                        <h2 class="subject"> 계단식 성장이라도 꾸준히 상승하고 싶습니다. </h2>
+                        <div class="date"> </div>
+                    </div>
+                </li>
             </ul>
 
         </div>
@@ -169,7 +183,7 @@
                 <li class="board-item">
                     <div class="sub-item">
                         <div class="cate"> 리눅스 서버, 아파치, NGINX, AWS, RDS, EC2, MYSQL, PHP, Javascript, jquery, CSS ,GIT,지라,레드마인   </div>
-                        <h2 class="subject"> 웹서비스를 위한 최적의 상황을 생각합니다.   </h2>
+                        <h2 class="subject"> 웹서비스를 위한 최적의 상황을 생각합니다. 다양한 상황에 대응할 수 있습니다.    </h2>
                         <div class="date"> </div>
                     </div>
                 </li>
@@ -194,7 +208,6 @@
 <script>
 
     $(function(){
-
 
         $(".section-board .tabs-board li").on('click', function () {
 
