--- a/new2022.html
+++ b/new2022.html
@@ -182,7 +182,7 @@
             <ul class="board-list">
                 <li class="board-item">
                     <div class="sub-item">
-                        <div class="cate"> 리눅스 서버, 아파치, NGINX, AWS, RDS, EC2, MYSQL, PHP, Javascript, jquery, CSS ,GIT,지라,레드마인   </div>
+                        <div class="cate"> 리눅스 서버, 아파치, NGINX, AWS, RDS, EC2, MYSQL, PHP, Javascript, jquery, CSS ,GIT,지라,레드마인, bitbucket, github   </div>
                         <h2 class="subject"> 웹서비스를 위한 최적의 상황을 생각합니다. 다양한 상황에 대응할 수 있습니다.    </h2>
                         <div class="date"> </div>
                     </div>
