--- a/new2022_life.html
+++ b/new2022_life.html
@@ -17,19 +17,19 @@
 <div class="wrap">
 
     <div class="top-event">
-       <div class="event-msg">문정화의 소개 </div>
+       <div class="event-msg">나의 생각들 </div>
    </div>
 
 
    <section class="section-board">
-       <div class="title"> 경력소개 </div>
+       <div class="title"> 생각  </div>
 
        <ul class="tabs-board">
-           <li rel="tab1" class="active">회사들- 초반 </li>
-           <li rel="tab2" data-value="digital" > 회사들- 후반  </li>
-           <li rel="tab3" data-value="manual" > 생각하는 것</li>
-           <li rel="tab4" data-value="faq" > 꿈꾸는 것</li>
-           <li rel="tab5" > 사용한 도구들</li>
+           <li rel="tab1" class="active">  힘이 되는 말들 </li>
+           <li rel="tab2" data-value="digital" > 화가날 때 </li>
+           <li rel="tab3" data-value="manual" > 긴장될 때</li>
+           <li rel="tab4" data-value="faq" > 나태해질 때</li>
+           <li rel="tab5" > 꿀꿀할 때</li>
        </ul>
 
        <div class="board-box tab1" style="display:block ;">
@@ -38,9 +38,9 @@
            <ul class="board-list">
                <li class="board-item">
                    <div class="sub-item">
-                       <div class="cate"> 다섯번째 회사</div>
-                       <h2 class="subject"> 디지털태인 에서 경매 관련 크롤링 및 사이트 관계된 모든 수정사항 및 업그레이드 사항을 수정하였습니다. </h2>
-                       <div class="date"> 2013. 09 ~ 2014. 11 (1년 3개월)</div>
+                       <div class="cate"> 세상 일에 한가지 방법만 있는 것은 아니다. 너무 한가지에 속상해 하지 마라. </div>
+                       <h2 class="subject"> 실수없는 인생도 없다. 누구나 망성이록 갈등하며 순간을 살고 성찰하고 다짐하며 내일을 기다린다.   </h2>
+                       <div class="date"> 2022.03.07 뭔가 잘못 나가고 있다고 생각이 들때. </div>
                    </div>
                </li>
            </ul>
@@ -48,9 +48,9 @@
            <ul class="board-list">
                <li class="board-item">
                    <div class="sub-item">
-                       <div class="cate"> 네번째 회사</div>
-                       <h2 class="subject">티켓몬스터 에서 핵심구조개선 작업에 참여하여 서비스 안정화에 기여하였습니다. </h2>
-                       <div class="date"> 2011. 11 ~ 2013. 04 (1년 6개월)</div>
+                       <div class="cate"> 자연의 순환만큼 인류사회도 탄생과 성장, 소멸을 반복한다. </div>
+                       <h2 class="subject"> 남이 바꾸는게 아니라 내가 바꾸는 인생을 살아야 한다.  </h2>
+                       <div class="date"> 2022.03.07  </div>
                    </div>
                </li>
            </ul>
@@ -58,9 +58,9 @@
            <ul class="board-list">
                <li class="board-item">
                    <div class="sub-item">
-                       <div class="cate"> 세번째 회사</div>
-                       <h2 class="subject"> CJ월디스 에서 아시아팝콘투어 라는 여행예약 시스템을 제작 하였습니다. </h2>
-                       <div class="date"> 2010. 08 ~ 2011. 05 (10개월)</div>
+                       <div class="cate"> 희망과 두려움은 한끗차이다. 둘다 불확실성에 반응 하지만 방식은 다르다. </div>
+                       <h2 class="subject"> 희망은전진하고 두려움은 물러선다. 희망은 취약하고 두려움은 자기 방어적이다. 모든 사람은 희망을 품으면서도 두려움을 느낄수 있다. </h2>
+                       <div class="date"> 2022.03.07 </div>
                    </div>
                </li>
            </ul>
@@ -68,9 +68,9 @@
            <ul class="board-list">
                <li class="board-item">
                    <div class="sub-item">
-                       <div class="cate"> 두번째 회사</div>
-                       <h2 class="subject">삼성경제연구소에서 서비스용 웹페이지를 제작하였습니다.   </h2>
-                       <div class="date"> 2008. 07 ~ 2009. 01 (7개월)</div>
+                       <div class="cate"> 라캉</div>
+                       <h2 class="subject"> 우울증이 생겨나는 것은 자아가 상실된 탓이기라기 보다는 욕망을 낳는 매커니즘이 제대로 작동하지 못하는 탓이라고 본다.  </h2>
+                       <div class="date"> 2022.03.07 </div>
                    </div>
                </li>
            </ul>
@@ -78,9 +78,9 @@
             <ul class="board-list">
                 <li class="board-item">
                     <div class="sub-item">
-                        <div class="cate"> 첫회사</div>
-                        <h2 class="subject"> POS 회사에서 영업정보시스템 용 웹페이지를 제작하였습니다.   </h2>
-                        <div class="date"> 2005. 04 ~ 2008. 02 (2년 11개월)</div>
+                        <div class="cate"> 하나의 문장은 정말 나의 시기에 따라 너무나 다르게 해석이 된다. </div>
+                        <h2 class="subject"> 이건 정말 신기한 일이 아닐 수 없다.   </h2>
+                        <div class="date"> 2022.03.07 </div>
                     </div>
                 </li>
             </ul>
@@ -92,10 +92,9 @@
             <ul class="board-list">
                 <li class="board-item">
                     <div class="sub-item">
-                        <div class="cate"> 아홉번째 회사</div>
-                        <h2 class="subject"> 엣지랭크 에서 버거킹 이벤트 마이크로사이트로 이벤트시 급증하는 트래픽 경험도 해보고 aws을 이용해 수많은 사이트를 제작 관리 하였습니다.
-                            다양한 이벤트 상황과 문제 해결 방법을 배운 회사입니다.  </h2>
-                        <div class="date"> 2017. 12 ~ 재직중 (4년 3개월) </div>
+                        <div class="cate"> 결핍에서 오는 갈구 </div>
+                        <h2 class="subject"> 부족하다고 느끼는 부분을 채우려는 것. 그것이 삶인지도 모른다.   </h2>
+                        <div class="date">  </div>
                     </div>
                 </li>
             </ul>
@@ -103,10 +102,9 @@
             <ul class="board-list">
                 <li class="board-item">
                     <div class="sub-item">
-                        <div class="cate"> 여덞번째 회사</div>
-                        <h2 class="subject"> 조아라 에서 반반무, 60일 이용권, 장애처리 , 인트라넷 수정 처리 , BL공모전 , 어워드 , 77페스티벌 등등의 프로젝트 수행하였습니다.
-                             웹소설이라는 많은 양의 데이타베이스 및 트래픽을 경험해 볼 수 있었습니다. </h2>
-                        <div class="date"> 2016. 09 ~ 2017. 09 (1년 1개월) </div>
+                        <div class="cate"> 비워야 하는데 자꾸 채우고 있다. </div>
+                        <h2 class="subject"> 비우지 않고 채우고 있어서 들어오지 못하고 있다. </h2>
+                        <div class="date"> </div>
                     </div>
                 </li>
             </ul>
